@@ -1,0 +1,3 @@
+class PrivateModeEnabledFeature < Spinach::FeatureSteps
+  include SharedPublicProjects
+end
