@@ -7,6 +7,7 @@ v 6.3.0
   - Security improvements
   - Added support for GitLab CI 4.0
   - Fixed issue with 500 error when group did not exist
+  - Added ability to require authentication to view public project pages (private mode)
 
 v 6.2.0
   - Public project pages are now visible to everyone (files, issues, wik, etc.)
